# chaos-qt

./: CMakeLists.txt  LICENSE  PLAN.md  README.md
.github/workflows/: build-desktop.yml
qt/src/: KosinskiWriter.cpp
qt/src/games/: Sonic2.cpp
qt/src/ui/: MapEditor.h  Window.cpp
src/: KosinskiReader.cpp  KosinskiReader.h  KosinskiWriter.cpp  KosinskiWriter.h  Logger.cpp  Logger.h  Palette.cpp  Rom.cpp  Rom.h  main.cpp
src/commands/: PencilCommand.cpp
src/games/: Sonic2.cpp  Sonic2Level.cpp  Sonic3.cpp  Sonic3Level.cpp
src/ui/: BlockInspector.cpp  BlockSelector.cpp  ChunkInspector.cpp  MapEditor.cpp  MapEditor.h  PatternInspector.cpp  Window.cpp  Window.h
test/: TestKosinskiReader.cpp  TestKosinskiWriter.cpp
